Add styles.css to make text bigger

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
     <style type="text/css">code{white-space: pre;}</style>
 
+    <link rel="stylesheet" href="styles.css"/>
 
 <!-- Printing and PDF exports -->
 <script id="paper-css" type="application/dynamic-css">
@@ -451,7 +452,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section>
     <h1 class="title">BS in science</h1>
     <h2 class="author">Rick O. Gilmore</h2>
-    <h3 class="date">2018-10-11 17:26:41</h3>
+    <h3 class="date">2018-10-16 11:49:21</h3>
 </section>
 
 <section><section id="preliminaries" class="titleslide slide level1"><h1>Preliminaries</h1></section><section class="slide level2">
@@ -462,6 +463,8 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <h2>About me</h2>
 <ul>
 <li>Associate Professor of Psychology</li>
+<li>Founding Director of Human Imaging, PSU <a href="http://imaging.psu.edu">SLEIC</a></li>
+<li>Co-Founder/Co-Director <a href="http://databrary.org">Databrary.org</a></li>
 <li>Ph.D. in cognitive neuroscience, Carnegie Mellon University</li>
 <li>B.A. in cognitive science, Brown University</li>
 <li>vision, perception &amp; action, brain development, open science</li>
@@ -485,12 +488,12 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li>30%</li>
 </ul>
 </section><section id="how-do-we-define-what-actually-true-means" class="slide level2">
-<h2>How do we define what ‘<em>actually true</em>’ means?</h2>
+<h2>How do we define what “<em>actually true</em>” means?</h2>
 </section><section id="science-and-scientists-should-be-open-transparent-about-their-methods-and-findings" class="slide level2">
 <h2>Science (and scientists) should be open &amp; transparent about their methods and findings</h2>
 <h3 id="agree-disagree">Agree | Disagree</h3>
 </section><section id="science-and-scientists-should-be-more-open-transparent-than-they-are-now" class="slide level2">
-<h2>Science (and scientists) <em>should</em> be more open &amp; transparent than they are now</h2>
+<h2>Science (and scientists) should be <em>more</em> open &amp; transparent than they are now</h2>
 <h3 id="agree-disagree-1">Agree | Disagree</h3>
 </section><section id="openness-and-transparency-are-related-to-research-robustness-e.g.-reproducibility-reliability-impact" class="slide level2">
 <h2>Openness and transparency are related to research robustness (e.g., reproducibility, reliability, impact)</h2>
@@ -517,7 +520,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </section><section class="slide level2">
 
 <div class="centered">
-<p><img src="http://www.nature.com/polopoly_fs/7.36718.1464174471!/image/reproducibility-graphic-online3.jpg_gen/derivatives/landscape_630/reproducibility-graphic-online3.jpg"" height=600px> </br> <small>(<a href="http://doi.org/10.1038/533452a">Baker, 2016</a>)</small></p>
+<p><img src="http://www.nature.com/polopoly_fs/7.36718.1464174471!/image/reproducibility-graphic-online3.jpg_gen/derivatives/landscape_630/reproducibility-graphic-online3.jpg"" width=700px> </br> <small>(<a href="http://doi.org/10.1038/533452a">Baker, 2016</a>)</small></p>
 </div>
 <aside class="notes">
 
@@ -563,7 +566,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </section><section class="slide level2">
 
 <div class="centered">
-<p><img src="http://www.nature.com/polopoly_fs/7.36719.1464174488!/image/reproducibility-graphic-online4.jpg_gen/derivatives/landscape_630/reproducibility-graphic-online4.jpg" height=600px> </br> <small>(<a href="http://doi.org/10.1038/533452a">Baker, 2016</a>)</small></p>
+<p><img src="http://www.nature.com/polopoly_fs/7.36719.1464174488!/image/reproducibility-graphic-online4.jpg_gen/derivatives/landscape_630/reproducibility-graphic-online4.jpg" width=700px> </br> <small>(<a href="http://doi.org/10.1038/533452a">Baker, 2016</a>)</small></p>
 </div>
 <aside class="notes">
 <p>These definitions help put some of the presumed causes into perspective.</p>
@@ -586,9 +589,10 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </section><section id="so-is-science-full-of-it" class="slide level2">
 <h2>So, is science ‘full of it’?</h2>
 <p><img src="https://i.pinimg.com/originals/11/99/55/1199557a7cbc80c73dfd6dd58ff19b54.jpg" height=500px/></p>
-<!-- Stepping over bs be like -->
+</section><section id="section" class="slide level2">
+<h2><!-- Stepping over bs be like --></h2>
 <ul>
-<li>BS persuades, but disregards truth (Frankfurt, <a href="https://en.wikipedia.org/wiki/On_Bullshit"><em>On Bullshit</em></a>)</li>
+<li>BS persuades, but (knowingly) disregards truth (Frankfurt, <a href="https://en.wikipedia.org/wiki/On_Bullshit"><em>On Bullshit</em></a>)</li>
 <li>Science practices and communications attempt to persuade about the truth</li>
 <li>But if truth value disregarded, overlooked, downplayed, exaggerated…</li>
 </ul>
@@ -596,7 +600,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section><section id="science-and-sin" class="titleslide slide level1"><h1>Science and sin</h1></section><section class="slide level2">
 
 <div class="centered">
-<p><img src="http://press.princeton.edu/images/k10970.gif" height=500px></p>
+<p><img src="http://press.princeton.edu/images/k10970.gif" height=550px></p>
 </div>
 <aside class="notes">
 <p>But rather than cast aspersions on other fields, let me focus on my own field’s deadly sins, as cognitive neuroscientist Chris Chambers put it.</p>
@@ -672,6 +676,8 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </section><section id="the-sin-of-bias" class="slide level2">
 <h2>The sin of bias…</h2>
 <p>Bem, D.J. (2011). Experimental evidence for anomalous retroactive influences on cognition and affect. <em>Journal of Personality and Social Psychology</em>, <em>100</em>(3), 407-425.</p>
+</section><section class="slide level2">
+
 <blockquote>
 <p>“This article reports 9 experiments, involving more than 1,000 participants, that test for retroactive influence by”time-reversing&quot; well-established psychological effects so that the individual’s responses are obtained before the putatively causal stimulus events occur.&quot;</p>
 </blockquote>
@@ -689,7 +695,13 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </section><section class="slide level2">
 
 <blockquote>
-<p>“We argue that in order to convince a skeptical audience of a controversial claim, one needs to conduct strictly confirmatory studies and analyze the results with statistical tests that are conservative rather than liberal. We conclude that Bem’s <em>p</em> values do not indicate evidence in favor of precognition; instead, they indicate that experimental psychologists need to change the way they conduct their experiments and analyze their data.”</p>
+<p>“We argue that in order to convince a skeptical audience of a controversial claim, one needs to conduct strictly confirmatory studies and analyze the results with statistical tests that are conservative rather than liberal…”</p>
+</blockquote>
+<p><small>(<a href="http://doi.org/10.1037/a0022790">Wagenmakers et al., 2011</a>)</small></p>
+</section><section class="slide level2">
+
+<blockquote>
+<p>“We conclude that Bem’s <em>p</em> values do not indicate evidence in favor of precognition; instead, they indicate that experimental psychologists need to change the way they conduct their experiments and analyze their data.”</p>
 </blockquote>
 <p><small>(<a href="http://doi.org/10.1037/a0022790">Wagenmakers et al., 2011</a>)</small></p>
 <aside class="notes">
@@ -732,9 +744,9 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <h2>Behavior multidimensional</h2>
 <div class="centered">
 <video data-autoplay height="550" controls>
-<source src="https://nyu.databrary.org/slot/11652/307774,376273/asset/47075/download?inline=true" type="video/mp4"> Your browser does not support the video tag.
+<source src="https://nyu.databrary.org/slot/27087/0,372193/asset/119877/download?inline=true" type="video/mp4"> Your browser does not support the video tag.
 </video>
-<p><small>(<a href="https://nyu.databrary.org/volume/232">Adolph et al., 2016</a>)</small></p>
+<p><small>(<a href="https://nyu.databrary.org/volume/444">Adolph et al., 2016</a>)</small></p>
 </div>
 </section><section id="embedded-in-networks" class="slide level2">
 <h2>Embedded in networks</h2>
@@ -802,17 +814,35 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </ul>
 </section><section id="reproducibility-project-psychology-rpp" class="slide level2">
 <h2>Reproducibility Project: Psychology (RPP)</h2>
-<p>Open Science Collaboration. (2015). Estimating the reproducibility of psychological science. Science, 349(6251), aac4716–aac4716. American Association for the Advancement of Science. Retrieved February 17, 2017, from <a href="http://science.sciencemag.org/content/349/6251/aac4716" class="uri">http://science.sciencemag.org/content/349/6251/aac4716</a></p>
+<p><a href="http://science.sciencemag.org/content/349/6251/aac4716">Open Science Collaboration, 2015</a></p>
+</section><section class="slide level2">
+
 <blockquote>
-<p>“We conducted replications of 100 experimental and correlational studies published in three psychology journals using high-powered designs and original materials when available….The mean effect size (r) of the replication effects (Mr = 0.197, SD = 0.257) was half the magnitude of the mean effect size of the original effects (Mr = 0.403, SD = 0.188), representing a substantial decline. Ninety-seven percent of original studies had significant results (P &lt; .05). Thirty-six percent of replications had significant results; 47% of original effect sizes were in the 95% confidence interval of the replication effect size; 39% of effects were subjectively rated to have replicated the original result; and if no bias in original results is assumed, combining original and replication results left 68% with statistically significant effects.”</p>
+<p>“We conducted replications of 100…studies published in three psychology journals using high-powered designs and original materials when available….The mean effect size (r) of the replication effects …was half the magnitude of the mean effect size of the original effects…”</p>
 </blockquote>
+<p><a href="http://science.sciencemag.org/content/349/6251/aac4716">Open Science Collaboration, 2015</a></p>
+</section><section class="slide level2">
+
+<blockquote>
+<p>“Ninety-seven percent of original studies had significant results (P &lt; .05). Thirty-six percent of replications had significant results”</p>
+</blockquote>
+<p><a href="http://science.sciencemag.org/content/349/6251/aac4716">Open Science Collaboration, 2015</a></p>
+</section><section class="slide level2">
+
+<blockquote>
+<p>“39% of effects were subjectively rated to have replicated the original result…”</p>
+</blockquote>
+<p><a href="http://science.sciencemag.org/content/349/6251/aac4716">Open Science Collaboration, 2015</a></p>
 </section><section class="slide level2">
 
 <p><img src="https://mfr.osf.io/export?url=https://osf.io/fg4d3/?action=download%26mode=render%26direct%26public_file=True&amp;initialWidth=711&amp;childId=mfrIframe&amp;parentTitle=OSF+%7C+F1+-+EffectSizes.png&amp;parentUrl=https://osf.io/fg4d3/&amp;format=2400x2400.jpeg" alt="Camerer et al. Fig 1" /></p>
-<p>Camerer, C. F., Dreber, A., Holzmeister, F., Ho, T.-H., Huber, J., Johannesson, M., Kirchler, M., et al. (2018). Evaluating the replicability of social science experiments in Nature and Science between 2010 and 2015. <em>Nature Human Behaviour</em>, <em>1</em>. Nature Publishing Group. Retrieved August 28, 2018, from <a href="https://www.nature.com/articles/s41562-018-0399-z" class="uri">https://www.nature.com/articles/s41562-018-0399-z</a></p>
+<p><a href="https://www.nature.com/articles/s41562-018-0399-z">Camerer, et al. 2018</a></p>
 </section><section class="slide level2">
 
 <p><img src="https://mfr.osf.io/export?url=https://osf.io/cefq7/?action=download%26mode=render%26direct%26public_file=True&amp;initialWidth=680&amp;childId=mfrIframe&amp;parentTitle=OSF+%7C+F4+-+PeerBeliefs.png&amp;parentUrl=https://osf.io/cefq7/&amp;format=2400x2400.jpeg" alt="Camerer et al. Fig 5" /></p>
+</section><section id="if-its-too-good-to-be-true-it-probably-isnt" class="slide level2">
+<h2>If it’s too good to be true, it probably isn’t</h2>
+<p><a href="https://80000hours.org/psychology-replication-quiz/" class="uri">https://80000hours.org/psychology-replication-quiz/</a></p>
 </section><section id="video-as-data-and-documentation" class="slide level2">
 <h2>Video as data and documentation</h2>
 <div class="centered">
@@ -861,19 +891,23 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <div class="centered">
 <p><img src="https://amindinfinite.files.wordpress.com/2014/05/bright-future-ahead-sm.jpg" height=450px/></p>
 </div>
-</section><section id="keep-in-touch" class="slide level2 vcenter flexbox">
-<h2>Keep in touch</h2>
-<h3 id="rogilmorepsu.edu"><a href="mailto:rogilmore@psu.edu">rogilmore@psu.edu</a></h3>
-<h3 id="gilmore-lab.github.io"><a href="http://gilmore-lab-github.io">gilmore-lab.github.io</a></h3>
+</section><section class="slide level2">
+
+<video width="800" loop data-autoplay>
+<source src="https://github.com/gilmore-lab/DEVSEC-2018/blob/master/mov/databrary-splash.mp4?raw=true" type="video/mp4">
+</video>
+<p><a href="mailto:rogilmore@psu.edu">rogilmore@psu.edu</a></p>
+<p><a href="https://gilmore-lab.github.io" class="uri">https://gilmore-lab.github.io</a></p>
+<p><a href="https://gilmore-lab.github.io/2018-10-16-bs-in-science/" class="uri">https://gilmore-lab.github.io/2018-10-16-bs-in-science/</a></p>
 </section><section id="stack" class="slide level2">
 <h2>Stack</h2>
-<p>This talk was produced on 2018-10-11 in <a href="http://rstudio.com">RStudio</a> using R Markdown and the reveal.JS framework. The code and materials used to generate the slides may be found at <a href="https://github.com/gilmore-lab/2018-02-14-quant-dev/" class="uri">https://github.com/gilmore-lab/2018-02-14-quant-dev/</a>. Information about the R Session that produced the code is as follows:</p>
+<p>This talk was produced on 2018-10-16 in <a href="http://rstudio.com">RStudio</a> using R Markdown and the reveal.JS framework. The code and materials used to generate the slides may be found at <a href="https://github.com/gilmore-lab/2018-10-16-bs-in-science/" class="uri">https://github.com/gilmore-lab/2018-10-16-bs-in-science/</a>. Information about the R Session that produced the code is as follows:</p>
 <pre><code>## R version 3.5.1 (2018-07-02)
 ## Platform: x86_64-apple-darwin15.6.0 (64-bit)
 ## Running under: macOS Sierra 10.12.6
 ## 
 ## Matrix products: default
-## BLAS: /Library/Frameworks/R.framework/Versions/3.5/Resources/lib/libRblas.0.dylib
+## BLAS: /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/libBLAS.dylib
 ## LAPACK: /Library/Frameworks/R.framework/Versions/3.5/Resources/lib/libRlapack.dylib
 ## 
 ## locale:
@@ -883,13 +917,27 @@ document.getElementsByTagName('head')[0].appendChild(style);
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-## [1] revealjs_0.9
+## [1] DiagrammeR_1.0.0 revealjs_0.9    
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] compiler_3.5.1  backports_1.1.2 magrittr_1.5    rprojroot_1.3-2
-##  [5] tools_3.5.1     htmltools_0.3.6 yaml_2.2.0      Rcpp_0.12.18   
-##  [9] stringi_1.2.4   rmarkdown_1.10  highr_0.7       knitr_1.20     
-## [13] stringr_1.3.1   digest_0.6.16   evaluate_0.11</code></pre>
+##  [1] Rcpp_0.12.18       highr_0.7          plyr_1.8.4        
+##  [4] compiler_3.5.1     pillar_1.3.0       RColorBrewer_1.1-2
+##  [7] influenceR_0.1.0   bindr_0.1.1        viridis_0.5.1     
+## [10] tools_3.5.1        digest_0.6.16      jsonlite_1.5      
+## [13] viridisLite_0.3.0  gtable_0.2.0       evaluate_0.11     
+## [16] tibble_1.4.2       rgexf_0.15.3       pkgconfig_2.0.2   
+## [19] rlang_0.2.2        igraph_1.2.2       rstudioapi_0.7    
+## [22] yaml_2.2.0         bindrcpp_0.2.2     gridExtra_2.3     
+## [25] downloader_0.4     dplyr_0.7.6        stringr_1.3.1     
+## [28] knitr_1.20         htmlwidgets_1.2    hms_0.4.2         
+## [31] grid_3.5.1         rprojroot_1.3-2    tidyselect_0.2.4  
+## [34] glue_1.3.0         R6_2.2.2           Rook_1.1-1        
+## [37] XML_3.98-1.16      rmarkdown_1.10     ggplot2_3.0.0     
+## [40] tidyr_0.8.1        purrr_0.2.5        readr_1.1.1       
+## [43] magrittr_1.5       backports_1.1.2    scales_1.0.0      
+## [46] htmltools_0.3.6    assertthat_0.2.0   colorspace_1.3-2  
+## [49] brew_1.0-6         stringi_1.2.4      visNetwork_2.0.4  
+## [52] lazyeval_0.2.1     munsell_0.5.0      crayon_1.3.4</code></pre>
 </section></section>
     </div>
   </div>
