--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section>
     <h1 class="title">BS in science</h1>
     <h2 class="author">Rick O. Gilmore</h2>
-    <h3 class="date">2018-10-16 11:49:21</h3>
+    <h3 class="date">2018-10-16 11:54:35</h3>
 </section>
 
 <section><section id="preliminaries" class="titleslide slide level1"><h1>Preliminaries</h1></section><section class="slide level2">
@@ -888,11 +888,15 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </aside>
 </section><section class="slide level2">
 
-<div class="centered">
-<p><img src="https://amindinfinite.files.wordpress.com/2014/05/bright-future-ahead-sm.jpg" height=450px/></p>
-</div>
+<p><img src="http://3.bp.blogspot.com/-hcXiVcmcm5g/Tsv1QlO-kUI/AAAAAAAACF0/vT_UjyHwA4k/s1600/manure.jpg" height=350px/></p>
+<!-- Manure happens; science is a pretty good shovel. -->
 </section><section class="slide level2">
 
+<div class="centered">
+<p><img src="http://www.vegetablegardener.com/assets/uploads/posts/14678/DSC_0024_lg.JPG" height=550px/></p>
+</div>
+</section><section id="section-1" class="slide level2">
+<h2><!-- Science is a pretty good shovel. --></h2>
 <video width="800" loop data-autoplay>
 <source src="https://github.com/gilmore-lab/DEVSEC-2018/blob/master/mov/databrary-splash.mp4?raw=true" type="video/mp4">
 </video>
