--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section>
     <h1 class="title">BS in science</h1>
     <h2 class="author">Rick O. Gilmore</h2>
-    <h3 class="date">2018-10-16 11:54:35</h3>
+    <h3 class="date">2018-10-16 14:47:08</h3>
 </section>
 
 <section><section id="preliminaries" class="titleslide slide level1"><h1>Preliminaries</h1></section><section class="slide level2">
@@ -465,6 +465,10 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li>Associate Professor of Psychology</li>
 <li>Founding Director of Human Imaging, PSU <a href="http://imaging.psu.edu">SLEIC</a></li>
 <li>Co-Founder/Co-Director <a href="http://databrary.org">Databrary.org</a></li>
+</ul>
+</section><section class="slide level2">
+
+<ul>
 <li>Ph.D. in cognitive neuroscience, Carnegie Mellon University</li>
 <li>B.A. in cognitive science, Brown University</li>
 <li>vision, perception &amp; action, brain development, open science</li>
@@ -480,6 +484,8 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </section></section>
 <section><section id="a-temperature-check" class="titleslide slide level1"><h1>A temperature check…</h1></section><section id="what-proportion-of-studies-in-the-published-scientific-literature-are-actually-true" class="slide level2">
 <h2>What proportion of studies in the published scientific literature are <em>actually true</em>?</h2>
+</section><section class="slide level2">
+
 <ul>
 <li>100%</li>
 <li>90%</li>
@@ -491,16 +497,12 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <h2>How do we define what “<em>actually true</em>” means?</h2>
 </section><section id="science-and-scientists-should-be-open-transparent-about-their-methods-and-findings" class="slide level2">
 <h2>Science (and scientists) should be open &amp; transparent about their methods and findings</h2>
-<h3 id="agree-disagree">Agree | Disagree</h3>
 </section><section id="science-and-scientists-should-be-more-open-transparent-than-they-are-now" class="slide level2">
 <h2>Science (and scientists) should be <em>more</em> open &amp; transparent than they are now</h2>
-<h3 id="agree-disagree-1">Agree | Disagree</h3>
 </section><section id="openness-and-transparency-are-related-to-research-robustness-e.g.-reproducibility-reliability-impact" class="slide level2">
 <h2>Openness and transparency are related to research robustness (e.g., reproducibility, reliability, impact)</h2>
-<h3 id="agree-disagree-2">Agree | Disagree</h3>
 </section><section id="unless-there-are-privacy-or-contractual-limitations-procedures-and-data-files-described-in-published-scientific-papers-should-be-readily-available-in-forms-reusable-by-others" class="slide level2">
 <h2>Unless there are privacy or contractual limitations, procedures and data files described in published scientific papers should be readily available in forms reusable by others</h2>
-<h3 id="agree-disagree-3">Agree | Disagree</h3>
 </section><section id="is-there-a-reproducibility-crisis-in-science" class="slide level2">
 <h2>Is there a reproducibility crisis in science?</h2>
 <ul>
@@ -726,7 +728,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <blockquote>
 <p>“…psychologists tend to treat other peoples’ theories like toothbrushes; no self-respecting individual wants to use anyone else’s.”</p>
 </blockquote>
-<p><a href="https://www.psychologicalscience.org/observer/becoming-a-cumulative-science">Walter Mischel, 2009</a></p>
+<p><small><a href="https://www.psychologicalscience.org/observer/becoming-a-cumulative-science">Mischel, 2009</a></small></p>
 </section><section id="the-sin-of-pragmatism" class="slide level2">
 <h2>The sin of pragmatism…</h2>
 <blockquote>
@@ -760,7 +762,8 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </div>
 </section><section id="humans-are-diverse" class="slide level2">
 <h2>Humans are diverse</h2>
-<p>But much (lab-based) data collected are from <strong>W</strong>estern, <strong>E</strong>ducated <strong>I</strong>ndustrialized, <strong>R</strong>ich, <strong>D</strong>emocratic (WEIRD) populations <a href="http://doi.org/10.1017/S0140525X0999152X">Henrich et al., 2010</a></p>
+<p>But much (lab-based) data collected are from <strong>W</strong>estern, <strong>E</strong>ducated <strong>I</strong>ndustrialized, <strong>R</strong>ich, <strong>D</strong>emocratic (WEIRD) populations</p>
+<p><small><a href="http://doi.org/10.1017/S0140525X0999152X">Henrich et al., 2010</a></small></p>
 </section><section class="slide level2">
 
 <div class="centered">
@@ -797,7 +800,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </section><section class="slide level2">
 
 <div class="centered">
-<p><a href="http://www.nature.com/articles/s41562-016-0021/figures/1"> <img src="http://www.nature.com/article-assets/npg/nathumbehav/2017/s41562-016-0021/images_hires/w926/s41562-016-0021-f1.jpg" height=500px> </a> </br> <small> (<a href="http://doi.org/10.1038/s41562-016-0021">Munafo et al., 2017</a>) </small></p>
+<p><a href="http://www.nature.com/articles/s41562-016-0021/figures/1"> <img src="http://www.nature.com/article-assets/npg/nathumbehav/2017/s41562-016-0021/images_hires/w926/s41562-016-0021-f1.jpg" height=500px> </a> </br> <small> <a href="http://doi.org/10.1038/s41562-016-0021">Munafo et al., 2017</a> </small></p>
 </div>
 <aside class="notes">
 <p>This recent manifesto from Nature Human Behavior describes the risks to reproducible science at every step of the process. I urge you to read it.</p>
@@ -820,26 +823,27 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <blockquote>
 <p>“We conducted replications of 100…studies published in three psychology journals using high-powered designs and original materials when available….The mean effect size (r) of the replication effects …was half the magnitude of the mean effect size of the original effects…”</p>
 </blockquote>
-<p><a href="http://science.sciencemag.org/content/349/6251/aac4716">Open Science Collaboration, 2015</a></p>
+<p><small><a href="http://science.sciencemag.org/content/349/6251/aac4716">Open Science Collaboration, 2015</a></small></p>
 </section><section class="slide level2">
 
 <blockquote>
 <p>“Ninety-seven percent of original studies had significant results (P &lt; .05). Thirty-six percent of replications had significant results”</p>
 </blockquote>
-<p><a href="http://science.sciencemag.org/content/349/6251/aac4716">Open Science Collaboration, 2015</a></p>
+<p><small><a href="http://science.sciencemag.org/content/349/6251/aac4716">Open Science Collaboration, 2015</a></small></p>
 </section><section class="slide level2">
 
 <blockquote>
 <p>“39% of effects were subjectively rated to have replicated the original result…”</p>
 </blockquote>
-<p><a href="http://science.sciencemag.org/content/349/6251/aac4716">Open Science Collaboration, 2015</a></p>
+<p><small><a href="http://science.sciencemag.org/content/349/6251/aac4716">Open Science Collaboration, 2015</a></small></p>
 </section><section class="slide level2">
 
 <p><img src="https://mfr.osf.io/export?url=https://osf.io/fg4d3/?action=download%26mode=render%26direct%26public_file=True&amp;initialWidth=711&amp;childId=mfrIframe&amp;parentTitle=OSF+%7C+F1+-+EffectSizes.png&amp;parentUrl=https://osf.io/fg4d3/&amp;format=2400x2400.jpeg" alt="Camerer et al. Fig 1" /></p>
-<p><a href="https://www.nature.com/articles/s41562-018-0399-z">Camerer, et al. 2018</a></p>
+<p><small><a href="https://www.nature.com/articles/s41562-018-0399-z">Camerer, et al. 2018</a></small></p>
 </section><section class="slide level2">
 
 <p><img src="https://mfr.osf.io/export?url=https://osf.io/cefq7/?action=download%26mode=render%26direct%26public_file=True&amp;initialWidth=680&amp;childId=mfrIframe&amp;parentTitle=OSF+%7C+F4+-+PeerBeliefs.png&amp;parentUrl=https://osf.io/cefq7/&amp;format=2400x2400.jpeg" alt="Camerer et al. Fig 5" /></p>
+<p><small><a href="https://www.nature.com/articles/s41562-018-0399-z">Camerer, et al. 2018</a></small></p>
 </section><section id="if-its-too-good-to-be-true-it-probably-isnt" class="slide level2">
 <h2>If it’s too good to be true, it probably isn’t</h2>
 <p><a href="https://80000hours.org/psychology-replication-quiz/" class="uri">https://80000hours.org/psychology-replication-quiz/</a></p>
@@ -864,11 +868,6 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li>Data libraries</li>
 <li>Funder, journal mandates for sharing increasing</li>
 <li>But no long-term, stable, funding sources for curation, archiving, sharing</li>
-<li>ArXiv model
-<ul>
-<li>Institutional (Cornell) support</li>
-<li>Subscription</li>
-</ul></li>
 </ul>
 </section><section class="slide level2">
 
